tests/semantica/invalid/metodos/test8.ctds
program 
    {
        integer foo(integer x, integer x){
            return 2;
        }
    }